--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -57,9 +57,8 @@ $$prediction \; accuracy = \frac{number \; of  \; correct  \; predictions}{total
 
 
 The process for assessing if our predictions match the true labels in the 
-test set is illustrated in Figure \@ref(fig:06-ML-paradigm-test).
-
-> Note that there are other measures for how well classifiers perform, such as *precision* and *recall*; 
+test set is illustrated in Figure \@ref(fig:06-ML-paradigm-test). Note that there 
+are other measures for how well classifiers perform, such as *precision* and *recall*; 
 these will not be discussed here, but you will likely encounter them in other more advanced
 books on this topic. 
 
@@ -121,7 +120,7 @@ and the same proportions exist in the testing data.
 Let's use the `initial_split` function to create the training and testing sets.
 We will specify that `prop = 0.75` so that 75% of our original data set ends up
 in the training set. We will also set the `strata` argument to the categorical label variable
-(here, `Class`) to ensure that the training and validation subsets contain the
+(here, `Class`) to ensure that the training and testing subsets contain the
 right proportions of each category of observation.
 The `training` and `testing` functions then extract the training and testing
 data sets into two separate data frames.
