filtering on accuracy in table to make it cleaner

--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -463,7 +463,8 @@ for (i in 1:5) {
 The accuracy estimate using the split based on `set.seed(1)` is `r round(100*acc,1)`%.
 Now we repeat the above code 4 more times, using `set.seed(i)` for `i = 2, 3, 4, 5`.
 With five different seeds, we get five different shuffles of the data, and therefore five different values for
-accuracy: `r sprintf("%.1f%%", round(100*accuracies,1))`. None of these is necessarily "more correct" than any other; they're
+accuracy: `r sprintf("%.1f%%", round(100*accuracies,1))`. None of these values are
+necessarily "more correct" than any other; they're
 just five estimates of the true, underlying accuracy of our classifier built
 using our overall training data. We can combine the estimates by taking their
 average (here `r round(100*mean(accuracies),0)`%) to try to get a single assessment of our
@@ -474,7 +475,7 @@ In practice, we don't use random splits, but rather use a more structured
 splitting procedure so that each observation in the data set is used in a
 validation set only a single time. The name for this strategy is called
 **cross-validation**.  In **cross-validation**, we split our **overall training
-data** into $C$ evenly-sized chunks, and then iteratively use $1$ chunk as the
+data** into $C$ evenly-sized chunks. Then, iteratively use $1$ chunk as the
 **validation set** and combine the remaining $C-1$ chunks 
 as the **training set**. 
 This procedure is shown in Figure \@ref(fig:06-cv-image).
@@ -533,7 +534,8 @@ You can also ignore the entire second row with `roc_auc` in the `.metric` column
 as it is beyond the scope of this book.
 
 ```{r 06-vfold-metrics}
-knn_fit |> collect_metrics()
+knn_fit |> 
+  collect_metrics() 
 ```
 
 We can choose any number of folds, and typically the more we use the better our
@@ -554,9 +556,10 @@ vfold_metrics <- workflow() |>
                   add_recipe(cancer_recipe) |>
                   add_model(knn_spec) |>
                   fit_resamples(resamples = cancer_vfold) |>
-                  collect_metrics()
+                  collect_metrics() 
 vfold_metrics
 ```
+
 
 ### Parameter value selection
 
@@ -596,7 +599,8 @@ knn_results <- workflow() |>
   add_recipe(cancer_recipe) |>
   add_model(knn_spec) |>
   tune_grid(resamples = cancer_vfold, grid = k_vals) |>
-  collect_metrics()
+  collect_metrics() |>
+  filter(.metric == "accuracy")
 knn_results
 ```
 We can select the best value of the number of neighbors (i.e., the one that results
