changing output of knn_results

--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -599,16 +599,17 @@ knn_results <- workflow() |>
   add_recipe(cancer_recipe) |>
   add_model(knn_spec) |>
   tune_grid(resamples = cancer_vfold, grid = k_vals) |>
-  collect_metrics() |>
-  filter(.metric == "accuracy")
-knn_results
-```
-We can select the best value of the number of neighbors (i.e., the one that results
-in the highest classifier accuracy estimate) by plotting the accuracy versus $K$.
-```{r 06-find-k, fig.height = 4, fig.width = 5, fig.cap= "Plot of estimated accuracy versus the number of neighbors"}
+  collect_metrics() 
+
 accuracies <- knn_results |>
   filter(.metric == "accuracy")
 
+accuracies
+```
+
+We can select the best value of the number of neighbors (i.e., the one that results
+in the highest classifier accuracy estimate) by plotting the accuracy versus $K$.
+```{r 06-find-k, fig.height = 4, fig.width = 5, fig.cap= "Plot of estimated accuracy versus the number of neighbors"}
 accuracy_vs_k <- ggplot(accuracies, aes(x = neighbors, y = mean)) +
   geom_point() +
   geom_line() +
