changing wording slightly

--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -608,7 +608,8 @@ accuracies
 ```
 
 We can select the best value of the number of neighbors (i.e., the one that results
-in the highest classifier accuracy estimate) by plotting the accuracy versus $K$.
+in the highest classifier accuracy estimate) by plotting the accuracy versus $K$ 
+in Figure \@ref(fig:06-find-k).
 ```{r 06-find-k, fig.height = 4, fig.width = 5, fig.cap= "Plot of estimated accuracy versus the number of neighbors"}
 accuracy_vs_k <- ggplot(accuracies, aes(x = neighbors, y = mean)) +
   geom_point() +
@@ -616,10 +617,10 @@ accuracy_vs_k <- ggplot(accuracies, aes(x = neighbors, y = mean)) +
   labs(x = "Neighbors", y = "Accuracy Estimate")
 accuracy_vs_k
 ```
-Figure \@ref(fig:06-find-k) suggests that setting the number of 
+Setting the number of 
 neighbors to $K =$ `r (accuracies %>% arrange(desc(mean)) %>% head(1))$neighbors`
-provides the highest accuracy.
-But as you can see, there is no exact or perfect answer here; 
+provides the highest accuracy (`r accuracies %>% arrange(desc(mean)) %>% select(mean) %>% slice(1) %>% round(4)`).
+But as you can see there is no exact or perfect answer here;  
  any selection from $K = 3$ and $15$ would be reasonably justified, as all
 of these differ in classifier accuracy by a small amount. Remember: the
 values you see on this plot are *estimates* of the true accuracy of our
