minor wording changes

--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -619,9 +619,8 @@ accuracy_vs_k
 ```
 Setting the number of 
 neighbors to $K =$ `r (accuracies %>% arrange(desc(mean)) %>% head(1))$neighbors`
-provides the highest accuracy (`r accuracies %>% arrange(desc(mean)) %>% select(mean) %>% slice(1) %>% round(4)`).
-But as you can see there is no exact or perfect answer here;  
- any selection from $K = 3$ and $15$ would be reasonably justified, as all
+provides the highest accuracy. But there is no exact or perfect answer here;
+any selection from $K = 3$ and $15$ would be reasonably justified, as all
 of these differ in classifier accuracy by a small amount. Remember: the
 values you see on this plot are *estimates* of the true accuracy of our
 classifier. Although the 
@@ -694,8 +693,9 @@ training data, it is said to **overfit** the data.
 
 Both overfitting and underfitting are problematic and will lead to a model 
 that does not generalize well to new data. When fitting a model, we need to strike
-a balance between the two. You can see these two effects in Figure \@ref(fig:06-decision-grid-K),
-which shows how the classifier changes as we set the number of neighbors $K$ to 1, 7, 20, and 300.
+a balance between the two. You can see these two effects in Figure 
+\@ref(fig:06-decision-grid-K), which shows how the classifier changes as 
+we set the number of neighbors $K$ to 1, 7, 20, and 300.
 
 <center>
 ```{r 06-decision-grid-K, echo = FALSE, message = FALSE, fig.height = 7, fig.width = 10, fig.cap = "Effect of K in overfitting and underfitting"}
@@ -736,14 +736,14 @@ grid.arrange(grobs = plots)
 ## Summary
 
 Classification algorithms use one or more quantitative variables to predict the
-value of another, categorical variable. The $K$-nearest neighbors algorithm in
-particular does this by first finding the $K$ points in the training data nearest
+value of another categorical variable. In particular, the $K$-nearest neighbors algorithm 
+does this by first finding the $K$ points in the training data nearest
 to the new observation, and then returning the majority class vote from those
 training observations. We can evaluate a classifier by splitting the data
 randomly into a training and test data set, using the training set to build the
 classifier, and using the test set to estimate its accuracy. Finally, we
 can tune the classifier (e.g., select the number of neighbors $K$ in $K$-NN)
-by maximizing estimated accuracy via cross-validation. This 
+by maximizing estimated accuracy via cross-validation. The overall 
 process is summarized in Figure \@ref(fig:06-overview).
 
 ```{r 06-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Overview of K-nn classification", fig.retina = 2, out.width = "660"}
