minor wording changes

--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -792,9 +792,8 @@ actually negatively affect classifier performance.
 ### The effect of irrelevant predictors
 
 Let's take a look at an example where $K$-nearest neighbors performs
-worse when given more predictors to work with. In this example we have modified
-the breast cancer data to have only the `Smoothness`, `Concavity`, and `Perimeter` variables from the original data,
-and then added irrelevant variables that we created ourselves using a random number generator.
+worse when given more predictors to work with. In this example, we modified
+the breast cancer data to have only the `Smoothness`, `Concavity`, and `Perimeter` variables from the original data. Then, we added irrelevant variables that we created ourselves using a random number generator.
 The irrelevant variables each take a value of 0 or 1 with equal probability for each observation, regardless
 of what the value `Class` variable takes. In other words, the irrelevant variables have 
 no meaningful relationship with the `Class` variable.
@@ -818,7 +817,7 @@ cancer_irrelevant %>%
 
 Next, we build a sequence of $K$-NN classifiers that include `Smoothness`,
 `Concavity`, and `Perimeter` as predictor variables, but also increasingly many irrelevant
-variables. In particular we create 6 data sets with 0, 5, 10, 15, 20, and 40 irrelevant predictors.
+variables. In particular, we create 6 data sets with 0, 5, 10, 15, 20, and 40 irrelevant predictors.
 Then we build a model, tuned via 5-fold cross-validation, for each data set.
 Figure \@ref(fig:06-performance-irrelevant-features) shows
 the estimated cross-validation accuracy versus the number of irrelevant predictors.  As
