--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -933,7 +933,7 @@ plt_irrelevant_nghbrs
 
 ### Finding a good subset of predictors
 
-So then if it is not ideal to use all of our variables as predictors without consideration, how 
+So then, if it is not ideal to use all of our variables as predictors without consideration, how 
 do we choose which variables we *should* use?  A simple method is to rely on your scientific understanding
 of the data to tell you which variables are not likely to be useful predictors. For example, in the cancer
 data that we have been studying, the `ID` variable is just a unique identifier for the observation.
@@ -943,7 +943,7 @@ is less obvious, as all seem like reasonable candidates. It
 is not clear which subset of them will create the best classifier. One could use visualizations and
 other exploratory analyses to try to help understand which variables are potentially relevant, but
 this process is both time-consuming and error-prone when there are many variables to consider.
-We therefore need a more systematic and programmatic way of choosing variables. 
+We therefore, need a more systematic and programmatic way of choosing variables. 
 This is a very difficult problem to solve in
 general, and there are a number of methods that have been developed that apply
 in particular cases of interest. Here we will discuss two basic
