adding accuracy number to one section

--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -619,7 +619,7 @@ accuracy_vs_k
 ```
 Setting the number of 
 neighbors to $K =$ `r (accuracies %>% arrange(desc(mean)) %>% head(1))$neighbors`
-provides the highest accuracy. But there is no exact or perfect answer here;
+provides the highest accuracy (`r (accuracies %>% arrange(desc(mean)) %>% slice(1) %>% pull(mean) %>% round(4))*100`%). But there is no exact or perfect answer here;
 any selection from $K = 3$ and $15$ would be reasonably justified, as all
 of these differ in classifier accuracy by a small amount. Remember: the
 values you see on this plot are *estimates* of the true accuracy of our
