moving code to a new line

--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -1020,7 +1020,8 @@ as potential predictors, and the `Class` variable as the label.
 We will also extract the column names for the full set of predictor variables.
 ```{r 06-fwdsel, warning = FALSE}
 set.seed(1)
-cancer_subset <- cancer_irrelevant %>% select(Class, Smoothness, Concavity, Perimeter, Irrelevant1, Irrelevant2, Irrelevant3)
+cancer_subset <- cancer_irrelevant %>% 
+  select(Class, Smoothness, Concavity, Perimeter, Irrelevant1, Irrelevant2, Irrelevant3)
 names <- colnames(cancer_subset %>% select(-Class))
 
 cancer_subset
@@ -1102,7 +1103,8 @@ for (i in 1:n_total) {
         models[[j]] <- model_string
     }
     jstar <- which.max(unlist(accs))
-    accuracies <- accuracies %>% add_row(size = i, model_string = models[[jstar]], accuracy = accs[[jstar]])
+    accuracies <- accuracies %>% 
+      add_row(size = i, model_string = models[[jstar]], accuracy = accs[[jstar]])
     selected <- c(selected, names[[jstar]])
     names <- names[-jstar]
 }
