fixing code box in wrong place

--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -1186,14 +1186,11 @@ the second argument we indicate the function we want to apply.
 ``` {r 02-across-data}
 max_of_columns <- region_lang |>
   summarize(across(mother_tongue:lang_known, max))
-```
 
-max\_of\_columns
-
+max_of_columns
 ``` 
-We get the same output as we did above and we didn't have to write out each and every column name! 
-```
 
+We get the same output as we did above and we didn't have to write out each and every column name! 
 What if you need to add other arguments to the functions you want to use? For
 example, what if there were NA values in our columns that we wanted to know the
 maximum of?
@@ -1228,12 +1225,9 @@ returned. An example of this is shown below:
 ``` {r 02-across-data-nas}
 max_of_columns <- region_with_nas |>
   summarize(across(mother_tongue:lang_known, max, na.rm = TRUE))
-```
-
-max\_of\_columns
+max_of_columns
 
 ``` 
-```
 
 Now we get the maximum count for each column ignoring the NAs in the data set!
 
