change triangle to diamond

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -315,7 +315,7 @@ neighbors <- cancer[order(my_distances$Distance), ]
 
 Suppose we have another new observation with standardized perimeter `r new_point[1]` and
 concavity of `r new_point[2]`. Looking at the scatter plot in Figure \@ref(fig:05-knn-4), how would you
-classify this red, triangular observation? The nearest neighbor to this new point is a
+classify this red, diamond observation? The nearest neighbor to this new point is a
 **benign** observation at (`r round(neighbors[1, c(attrs[1], attrs[2])], 1)`).
 Does this seem like the right prediction to make for this observation? Probably 
 not, if you consider the other nearby points...
@@ -351,7 +351,7 @@ neighboring points, say $K = 3$, that are closest to the new observation
 to predict its diagnosis class. Among those 3 closest points, we use the
 *majority class* as our prediction for the new observation. As shown in Figure \@ref(fig:05-knn-5), we
 see that the diagnoses of 2 of the 3 nearest neighbors to our new observation
-are malignant. Therefore we take majority vote and classify our new red, triangular
+are malignant. Therefore we take majority vote and classify our new red, diamond
 observation as malignant. 
 <!-- For our red observation at (`r new_point`), the nearest points are: (`r round(neighbors[1, c(attrs[1], attrs[2])], 1)`), (`r round(neighbors[2,  c(attrs[1], attrs[2])],1)`), and (`r round(neighbors[3, c(attrs[1], attrs[2])],1)`). -->
 
